# oto2

./: README.md  oto2.cabal  stack.yaml
.github/workflows/: ci.yaml
src/Data/: CWG.hs
test/: SimpleSpec.hs
test/Data/: CWGSpec.hs
