name:                oto2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jcinnamond/oto2#readme
license:             BSD3
license-file:        LICENSE
author:              John Cinnamond
maintainer:          john@cinnamond.me.uk
copyright:           John Cinnamond
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
    Data.CWG
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  build-depends:       
      base >= 4.7 && < 5
    , hspec

test-suite oto2-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror
  build-tool-depends: hspec-discover:hspec-discover == 2.*
  other-modules:
      SimpleSpec
      Data.CWGSpec
  build-depends:
      base >= 4.7 && < 5
    , hspec == 2.*
    , oto2
